--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.4.2",
         "bootstrap": "^5.3.2",
-        "font-awesome": "^4.7.0"
+        "font-awesome": "^4.7.0",
+        "fontawesome-free": "^1.0.4"
     }
 }
